--- a/.github/workflows/deploy-pages.yml
+++ b/.github/workflows/deploy-pages.yml
@@ -27,12 +27,11 @@ jobs:
           node-version: 20
           cache: npm
 
-      - name: Upgrade npm (fix optionalDependencies bug)
-        run: npm i -g npm@11.3.0
-
-      - name: Install
-        run: npm ci --include=optional
-
+      - name: Clean install (Linux runner)
+        run: |
+          rm package-lock.json
+          npm i --include=optional
+      
       - name: Build
         run: npm run build
 
